--- a/tool/install
+++ b/tool/install
@@ -27,7 +27,7 @@
 set -e
 
 PROGNAME='INSTALL'
-# version info, ref: http://semver.org
+# version info, ref [http://semver.org] for more information
 MAJORVER='0'
 MINORVER='1'
 PATCHVER='0'
@@ -40,7 +40,7 @@ DEBUG=0
 
 # specify the install destination directory
 PREFIX="${HOME}"
-DESTDIR="${PREFIX}/.shell"
+DESTDIR="${DESTDIR:-${HOME}/.shell}"
 
 # url for the archive
 ARCHURL='https://github.com/oxnz/shell-utils/archive/v0.1.0.tar.gz'
@@ -99,7 +99,7 @@ initialize() {
 
 # post-install process
 finalize() {
-	msgdump 'debug' 'formalize success'
+	msgdump 'debug' 'finalize success'
 }
 
 # install process
@@ -181,6 +181,7 @@ formalize() {
 	for src in "${DESTDIR}/dot/*"; do
 		dst="${HOME}/.$(basename "${src}")"
 		if [ ! -e "${dst}" ]; then
+			msgdump 'debug' "skipped for non-exists target: [${dst}]"
 			continue
 		fi
 		if [ -h "${dst}" ]; then
@@ -240,6 +241,7 @@ uninst() {
 }
 
 main() {
+	[ -t 1 ] && echo $'\e[31m'
 	cat << EOF
          __         ____            __  _ __    
    _____/ /_  ___  / / /     __  __/ /_(_) /____
@@ -250,6 +252,7 @@ main() {
        Shell-utils installer ${VERSION}
 ------------------------------------------------
 EOF
+	[ -t 1 ] && echo $'\e[m'
 	local OPTIND=1
 	local opt
     while getopts "d:huv" opt; do
@@ -270,10 +273,10 @@ EOF
 				cat << EOH
 Usage: $0 [options]
 options:
-    -d DIR  install to the specified DIR
-    -D	  enable debug mode
-    -h	  show this message and exit
-    -v	  specify verbose level
+    -d DIR    install to the specified DIR
+    -D	      enable debug mode
+    -h	      show this message and exit
+    -v	      specify verbose level
 EOH
 				return
 				;;
